<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res/com.ikt.platinumbeers"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout android:orientation="vertical" android:layout_gravity="center_vertical" android:gravity="center_vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
        		<LinearLayout android:orientation="horizontal" android:layout_height="wrap_content" android:layout_width="fill_parent" android:layout_marginBottom="10dp">
			   		<TextView style="@style/TextViewSmall" android:text="@string/text_today" android:layout_height="wrap_content" android:layout_gravity="center" android:layout_width="wrap_content"/>
			   		<SeekBar
	        	    android:id="@+id/seek_days"
	            	android:layout_width="fill_parent"
	            	android:layout_height="wrap_content"
	            	android:progress="6"
	            	android:secondaryProgress="6"
	            	android:max="6" />
		   		</LinearLayout>
		   		<TableLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
		   		    <TableRow android:layout_marginBottom="10dp" >
		   		        <TextView android:gravity="center"  style="@style/TextViewSmall" android:text="@string/text_glass" android:layout_weight="3" android:layout_width="0dp" android:layout_height="wrap_content" />
		   		        <TextView android:gravity="center" style="@style/TextViewSmall" android:text="@string/text_plus" android:layout_weight="1" android:layout_width="0dp" android:layout_height="wrap_content" />
		   		        <TextView android:gravity="center" style="@style/TextViewSmall" android:text="@string/text_tower" android:layout_weight="3" android:layout_width="0dp" android:layout_height="wrap_content" />
		   		        <TextView android:gravity="center" style="@style/TextViewSmall" android:text="@string/text_or" android:layout_weight="1" android:layout_width="0dp" android:layout_height="wrap_content" />
		   		        <TextView android:gravity="center" style="@style/TextViewSmall" android:text="@string/text_keg" android:layout_weight="3" android:layout_width="0dp" android:layout_height="wrap_content" />
		   		    </TableRow>
		   		    <TableRow android:layout_marginBottom="10dp">
		   		        <EditText style="@style/EditTextAppTheme" android:inputType="number" android:layout_weight="3" android:layout_width="0dp" android:layout_height="wrap_content"/>
		   		        <TextView android:gravity="center" style="@style/TextViewSmall" android:layout_weight="1" android:layout_width="0dp" android:layout_height="wrap_content" />
		   		        <EditText style="@style/EditTextAppTheme" android:inputType="number" android:layout_weight="3" android:layout_width="0dp" android:layout_height="wrap_content"/>
		   		        <TextView android:gravity="center" style="@style/TextViewSmall" android:layout_weight="1" android:layout_width="0dp" android:layout_height="wrap_content" />
		   		        <EditText style="@style/EditTextAppTheme" android:inputType="number" android:layout_weight="3" android:layout_width="0dp" android:layout_height="wrap_content"/>
		   		    </TableRow>
		   		    <Button style="@style/ButtonAppTheme" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/text_venue_pos_report" android:layout_marginBottom="10dp"/>
		   		    <TableRow android:layout_marginBottom="10dp" >
		   		        <EditText style="@style/EditTextAppTheme" android:inputType="number" android:layout_weight="3" android:layout_width="0dp" android:layout_height="wrap_content"/>
		   		        <TextView android:gravity="center" style="@style/TextViewSmall" android:layout_weight="1" android:layout_width="0dp" android:layout_height="wrap_content" />
		   		        <EditText style="@style/EditTextAppTheme" android:inputType="number" android:layout_weight="3" android:layout_width="0dp" android:layout_height="wrap_content"/>
		   		        <TextView android:gravity="center" style="@style/TextViewSmall" android:layout_weight="1" android:layout_width="0dp" android:layout_height="wrap_content" />
		   		        <TextView android:gravity="center" style="@style/TextViewSmall" android:layout_weight="3" android:layout_width="0dp" android:layout_height="wrap_content" />
		   		    </TableRow>
		   		    <Button style="@style/ButtonAppTheme" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/text_pg_shift_report" android:layout_marginBottom="10dp"/>
		   		</TableLayout>
	</LinearLayout>
	
</ScrollView>