<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ikt.platinumbeers.AuthActivity"
    android:orientation="vertical"
    style="@style/LinearLayoutAppTheme" >

    <ImageView
        style="@style/ImageViewHeaderLogo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ppa_logo_transparent" />

     <LinearLayout android:layout_height="fill_parent" android:layout_width="fill_parent" android:orientation="vertical" android:gravity="center" >
         <Spinner
        android:id="@+id/venue_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/SpinnerAppTheme"
        android:entries="@array/days_of_week"
        android:layout_marginBottom="10dp"/>
		<EditText android:id="@+id/auth_username"
		   
		    style="@style/EditTextAppTheme"
		    android:hint="@string/hint_username"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_marginBottom="10dp" >
		</EditText>
		<EditText android:id="@+id/auth_password"
		  
		    style="@style/EditTextAppTheme"
		    
		    android:hint="@string/hint_password"
		    android:inputType="textPassword"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_marginBottom="10dp" >
		</EditText>
		
		<Button android:id="@+id/auth_login" android:text="@string/text_login" style="@style/ButtonAppTheme" android:layout_width="fill_parent" android:layout_height="wrap_content" >
		    
		</Button>
     </LinearLayout>
</LinearLayout>
