<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res/com.ikt.platinumbeers"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout android:orientation="vertical" android:layout_gravity="center_vertical" android:gravity="center_vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
		<EditText style="@style/EditTextAppTheme" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/hint_entercardno" android:layout_marginBottom="10dp"/>
		<Button style="@style/ButtonAppTheme" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/text_choose_prize" android:layout_marginBottom="10dp"/>
		<Spinner
        android:id="@+id/venue_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/SpinnerAppTheme"
        android:entries="@array/days_of_week"
        android:layout_marginBottom="10dp"/>
		<Button style="@style/ButtonAppTheme" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/text_redeem_prize" android:layout_marginBottom="10dp"/>
	</LinearLayout>
	
</ScrollView>